applications/tandoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: tandoor
  labels:
    app: recipes
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
      tier: frontend
  template:
    metadata:
      labels:
        app: recipes
        tier: frontend
    spec:
      containers:
        - name: recipes-nginx
          image: public.ecr.aws/nginx/nginx-unprivileged:stable-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          volumeMounts:
            - mountPath: /media
              name: media
              subPath: files
            - mountPath: /static
              name: static
              subPath: files
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
        - name: recipes
          image: vabene1111/recipes:latest
          imagePullPolicy: IfNotPresent
          command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8081
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --log-level
            - INFO
            - recipes.wsgi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            runAsUser: 65534
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: media
              subPath: files
            - mountPath: /opt/recipes/staticfiles
              name: static
              subPath: files
            - mountPath: /etc/ssl/homelab
              name: homelab-ca
              readOnly: true
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static
        - name: homelab-ca
          secret:
            secretName: homelab-ca-secret
            items:
              - key: tls.crt
                path: ca.crt
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
