applications/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: tandoor
  labels:
    app: recipes
    tier: frontend
spec:
  selector:
    app: recipes
    tier: frontend
  ports:
    - port: 8080
      targetPort: http
      name: http
      protocol: TCP
