applications/tandoor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tandoor
  namespace: tandoor
spec:
  parentRefs:
    - name: homelab
      namespace: kube-system
      sectionName: https
  hostnames:
    - "tandoor.home.didcot"
  rules:
    - backendRefs:
        - name: recipes
          port: 8080
